--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "name": "huurkans",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.0",
+    "@supabase/supabase-js": "2.44.2",
+    "bcryptjs": "2.4.3",
+    "next": "14.2.5",
+    "next-auth": "4.24.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stripe": "11.11.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "10.4.14",
-    "postcss": "8.4.24",
-    "tailwindcss": "3.4.8"
+    "stripe": "14.25.0"
   }
 }
