--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "14.25.0"
+  },
+  "devDependencies": {
+    "postcss": "8.4.35",
+    "autoprefixer": "10.4.17"
   }
 }
