--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "postcss": "8.4.35",
-    "autoprefixer": "10.4.17"
+    "autoprefixer": "10.4.17",
+    "tailwindcss": "3.4.8"
   }
 }
