--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "huurkans",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,11 +14,11 @@
     "next-auth": "4.24.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stripe": "14.25.0"
+    "stripe": "14.25.0",
     "tailwindcss": "3.4.8"
   },
   "devDependencies": {
     "postcss": "8.4.35",
-    "autoprefixer": "10.4.17",
+    "autoprefixer": "10.4.17"
   }
 }
