--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "14.25.0",
+    "micro": "9.4.1",
     "tailwindcss": "3.4.8"
   },
   "devDependencies": {
