--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18.2.0",
     "stripe": "14.25.0",
     "micro": "9.4.1",
+    "rss-parser": "3.13.0",
     "tailwindcss": "3.4.8"
   },
   "devDependencies": {
