--- a/package.json
+++ b/package.json
@@ -1,26 +1,13 @@
 {
-  "name": "huurkans",
-  "version": "0.2.1",
+  "name": "huurkans-scraper",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "scrape": "node scripts/scrape_pararius.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "2.44.2",
-    "bcryptjs": "2.4.3",
-    "next": "14.2.5",
-    "next-auth": "4.24.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "stripe": "14.25.0",
-    "micro": "9.4.1",
-    "rss-parser": "3.13.0",
-    "tailwindcss": "3.4.8"
-  },
-  "devDependencies": {
-    "postcss": "8.4.35",
-    "autoprefixer": "10.4.17"
+    "cheerio": "1.0.0-rc.12",
+    "cross-fetch": "4.0.0",
+    "playwright": "1.47.2"
   }
 }
