--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "huurkans",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "private": true,
   "type": "module",
   "scripts": {
@@ -8,19 +8,22 @@
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "next lint",
-    "vercel-build": "next build"
+    "vercel-build": "next build",
+    "scrape": "node scripts/scrape_pararius.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "2.45.4",
+    "bcryptjs": "2.4.3",
+    "micro": "10.0.1",
     "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "@supabase/supabase-js": "^2.45.4",
-    "next-auth": "^4.24.6",
-    "bcryptjs": "^2.4.3",
-    "cross-fetch": "^3.1.8"
+    "next-auth": "4.24.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "stripe": "14.22.0",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.2.5"
   }
 }
