--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@supabase/supabase-js": "2.45.4",
     "bcryptjs": "2.4.3",
+    "cross-fetch": "^3.1.8",
     "micro": "10.0.1",
     "next": "14.2.5",
     "next-auth": "4.24.7",
