--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "2.4.3",
     "cross-fetch": "^3.1.8",
     "micro": "10.0.1",
+    "cheerio": "^1.0.0-rc.12",
     "next": "14.2.5",
     "next-auth": "4.24.7",
     "react": "18.2.0",
