--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "14.22.0",
+    "playwright": "^1.46.1",
     "uuid": "9.0.1"
   },
   "devDependencies": {
